# GIMBench

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md
benchmarks/GIMBench-regex-match/: 1_articles.py  2_gim_queries.py
evals/: aggregate_results.py  arguments.py  commands.sh  log.py
evals/ctp/: evaluators.py  gim_sft.py
evals/mcqa/: evaluators.py  gpqa_diamond.py  medmcqa.py  mmlu_pro.py  qasc.py
generators/: articles.py  gim_queries_regex.py
scripts/: commands.sh
src/gimbench/: arguments.py  base.py  log.py  models.py
src/gimbench/ctp/: evaluators.py
src/gimbench/match/: evaluators.py  gim_regex.py
src/gimbench/mcqa/: evaluators.py
src/gimbench/tools/: aggregate_results.py
