[project]
name = "gimbench"
version = "0.1.0"
description = "Benchmarking the guided infilling models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "gimkit>=0.1.0a6",
    "rich>=14.2.0",
    "vllm>=0.11.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "mypy>=1.18.2",
    "ruff>=0.14.5",
]

[tool.mypy]
disable_error_code = [
    "import-untyped",
]

[tool.ruff]
fix = true
line-length = 100
target-version = "py310"
lint.extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ERA", # flake8-eradicate/eradicate
    "I",   # isort
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "TC", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
]
lint.ignore = [
    "RUF001", # ambiguous-unicode-character-string
    "PGH003", # blanket-type-ignore
]
lint.isort.lines-between-types = 1
lint.isort.lines-after-imports = 2
